# carry-protocol

./: README.md  SPEC.md  pyproject.toml
src/carry/: __init__.py  baton_bridge.py  carrier.py  fence.py  parcel.py  route.py  store.py
src/carry_protocol.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_baton_bridge.py  test_carrier.py  test_fence.py  test_parcel.py
